analysis/low-level-api-fir/testData/lazyResolve/errors/contextParameterOnPrimaryConstructor.kt
annotation class Anno

class Clazz @Anno("str") context(c:Clazz) construct<caret>or(i: Int)